chore(docs): rebuild documentation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<div class="row">
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
-				<h1 id="validate-commit">Validate Commit</h1>
+				<h1 id="validate-git-commit-msg">Validate Git Commit Msg</h1>
 				<p><a href="https://circleci.com/gh/Joaquin6/validate-git-commit-msg/tree/master"><img src="https://circleci.com/gh/Joaquin6/validate-git-commit-msg/tree/master.svg?style=svg" alt="CircleCI"></a>
 					<a href="https://npmjs.org/package/validate-commit"><img src="https://img.shields.io/npm/v/validate-commit.svg?style=flat-square" alt="NPM version"></a>
 				<a href="https://npmjs.org/package/validate-commit"><img src="http://img.shields.io/npm/dm/validate-commit.svg?style=flat-square" alt="Downloads"></a></p>
