chore(docs): rebuild documentation

--- a/modules/_helpers_.html
+++ b/modules/_helpers_.html
@@ -70,10 +70,21 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_helpers_.html#existssync" class="tsd-kind-icon">exists<wbr>Sync</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_helpers_.html#lstatsync" class="tsd-kind-icon">lstat<wbr>Sync</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_helpers_.html#readfilesync" class="tsd-kind-icon">read<wbr>File<wbr>Sync</a></li>
+							</ul>
+						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_helpers_.html#findparentdir" class="tsd-kind-icon">find<wbr>Parent<wbr>Dir</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_helpers_.html#getgitfolder" class="tsd-kind-icon">get<wbr>Git<wbr>Folder</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_helpers_.html#log" class="tsd-kind-icon">log</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_helpers_.html#splitpath" class="tsd-kind-icon">split<wbr>Path</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section tsd-is-not-exported">
@@ -85,8 +96,84 @@
 					</div>
 				</section>
 			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="existssync" class="tsd-anchor"></a>
+					<h3>exists<wbr>Sync</h3>
+					<div class="tsd-signature tsd-kind-icon">exists<wbr>Sync<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">existsSync</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L7">helpers.ts:7</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="lstatsync" class="tsd-anchor"></a>
+					<h3>lstat<wbr>Sync</h3>
+					<div class="tsd-signature tsd-kind-icon">lstat<wbr>Sync<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">lstatSync</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L7">helpers.ts:7</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="readfilesync" class="tsd-anchor"></a>
+					<h3>read<wbr>File<wbr>Sync</h3>
+					<div class="tsd-signature tsd-kind-icon">read<wbr>File<wbr>Sync<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">readFileSync</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L7">helpers.ts:7</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="findparentdir" class="tsd-anchor"></a>
+					<h3>find<wbr>Parent<wbr>Dir</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">find<wbr>Parent<wbr>Dir<span class="tsd-signature-symbol">(</span>currentFullPath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, clue<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L41">helpers.ts:41</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>currentFullPath: <span class="tsd-signature-type">string</span></h5>
+								</li>
+								<li>
+									<h5>clue: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
+					<a name="getgitfolder" class="tsd-anchor"></a>
+					<h3>get<wbr>Git<wbr>Folder</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Git<wbr>Folder<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L55">helpers.ts:55</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
 					<a name="log" class="tsd-anchor"></a>
 					<h3>log</h3>
@@ -97,7 +184,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L20">helpers.ts:20</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L33">helpers.ts:33</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -113,6 +200,29 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="splitpath" class="tsd-anchor"></a>
+					<h3>split<wbr>Path</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">split<wbr>Path<span class="tsd-signature-symbol">(</span>partsPath<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L24">helpers.ts:24</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>partsPath: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
+						</li>
+					</ul>
+				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Object literals</h2>
@@ -122,7 +232,7 @@
 					<div class="tsd-signature tsd-kind-icon">LOG_<wbr>LEVELS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L5">helpers.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L9">helpers.ts:9</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-object-literal tsd-is-not-exported">
@@ -131,7 +241,7 @@
 						<div class="tsd-signature tsd-kind-icon">debug<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L15">helpers.ts:15</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L10">helpers.ts:10</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-not-exported">
@@ -140,7 +250,7 @@
 							<div class="tsd-signature tsd-kind-icon">color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;white&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L16">helpers.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L11">helpers.ts:11</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -151,7 +261,7 @@
 						<div class="tsd-signature tsd-kind-icon">error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L6">helpers.ts:6</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L13">helpers.ts:13</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-not-exported">
@@ -160,7 +270,7 @@
 							<div class="tsd-signature tsd-kind-icon">color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;red&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L7">helpers.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L14">helpers.ts:14</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -171,7 +281,7 @@
 						<div class="tsd-signature tsd-kind-icon">info<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L12">helpers.ts:12</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L16">helpers.ts:16</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-not-exported">
@@ -180,7 +290,7 @@
 							<div class="tsd-signature tsd-kind-icon">color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;cyan&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L13">helpers.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L17">helpers.ts:17</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -191,7 +301,7 @@
 						<div class="tsd-signature tsd-kind-icon">warn<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L9">helpers.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L19">helpers.ts:19</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-not-exported">
@@ -200,7 +310,7 @@
 							<div class="tsd-signature tsd-kind-icon">color<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> =&nbsp;&quot;yellow&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/helpers.ts#L10">helpers.ts:10</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/helpers.ts#L20">helpers.ts:20</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -244,12 +354,33 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
+					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_helpers_.html#existssync" class="tsd-kind-icon">exists<wbr>Sync</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_helpers_.html#lstatsync" class="tsd-kind-icon">lstat<wbr>Sync</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_helpers_.html#readfilesync" class="tsd-kind-icon">read<wbr>File<wbr>Sync</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_helpers_.html#findparentdir" class="tsd-kind-icon">find<wbr>Parent<wbr>Dir</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module">
+						<a href="_helpers_.html#getgitfolder" class="tsd-kind-icon">get<wbr>Git<wbr>Folder</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_helpers_.html#log" class="tsd-kind-icon">log</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_helpers_.html#splitpath" class="tsd-kind-icon">split<wbr>Path</a>
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="_helpers_.html#log_levels" class="tsd-kind-icon">LOG_<wbr>LEVELS</a>
