--- a/modules/_interfaces_.html
+++ b/modules/_interfaces_.html
@@ -94,10 +94,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
 					<a name="presettypes" class="tsd-anchor"></a>
 					<h3>Preset<wbr>Types</h3>
-					<div class="tsd-signature tsd-kind-icon">Preset<wbr>Types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"angular"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"atom"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"ember"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"eslint"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"jquery"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"jshint"</span></div>
+					<div class="tsd-signature tsd-kind-icon">Preset<wbr>Types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"angular"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"atom"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"ember"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"eslint"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"jquery"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"jshint"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"semver"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/interfaces.ts#L1">interfaces.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/interfaces.ts#L1">interfaces.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">Severity<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"error"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"warn"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"info"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"debug"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/interfaces.ts#L3">interfaces.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/interfaces.ts#L3">interfaces.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -148,6 +148,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
