--- a/modules/_presets_index_.html
+++ b/modules/_presets_index_.html
@@ -103,6 +103,9 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
+					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
