--- a/modules/_presets_semver_.html
+++ b/modules/_presets_semver_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;presets/jshint&quot; | validate-git-commit-msg</title>
+	<title>&quot;presets/semver&quot; | validate-git-commit-msg</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_presets_jshint_.html">&quot;presets/jshint&quot;</a>
+					<a href="_presets_semver_.html">&quot;presets/semver&quot;</a>
 				</li>
 			</ul>
-			<h1>External module &quot;presets/jshint&quot;</h1>
+			<h1>External module &quot;presets/semver&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -73,7 +73,7 @@
 						<section class="tsd-index-section ">
 							<h3>Object literals</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-object-literal tsd-parent-kind-external-module"><a href="_presets_jshint_.html#jshint" class="tsd-kind-icon">jshint</a></li>
+								<li class="tsd-kind-object-literal tsd-parent-kind-external-module"><a href="_presets_semver_.html#semver" class="tsd-kind-icon">semver</a></li>
 							</ul>
 						</section>
 					</div>
@@ -82,26 +82,26 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Object literals</h2>
 				<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-external-module">
-					<a name="jshint" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> jshint</h3>
-					<div class="tsd-signature tsd-kind-icon">jshint<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<a name="semver" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> semver</h3>
+					<div class="tsd-signature tsd-kind-icon">semver<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/jshint.ts#L5">presets/jshint.ts:5</a></li>
+							<li>Defined in presets/semver.ts:5</li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
-						<a name="jshint.ignorepattern" class="tsd-anchor"></a>
+						<a name="semver.ignorepattern" class="tsd-anchor"></a>
 						<h3>ignore<wbr>Pattern</h3>
-						<div class="tsd-signature tsd-kind-icon">ignore<wbr>Pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> =&nbsp;/^\[{2}WIP\]{2}/</span></div>
+						<div class="tsd-signature tsd-kind-icon">ignore<wbr>Pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> =&nbsp;/^WIP\:/</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/jshint.ts#L73">presets/jshint.ts:73</a></li>
+								<li>Defined in presets/semver.ts:77</li>
 							</ul>
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-object-literal">
-						<a name="jshint.validate" class="tsd-anchor"></a>
+						<a name="semver.validate" class="tsd-anchor"></a>
 						<h3>validate</h3>
 						<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-object-literal">
 							<li class="tsd-signature tsd-kind-icon">validate<span class="tsd-signature-symbol">(</span>message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span></li>
@@ -110,7 +110,7 @@
 							<li class="tsd-description">
 								<aside class="tsd-sources">
 									<ul>
-										<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/jshint.ts#L6">presets/jshint.ts:6</a></li>
+										<li>Defined in presets/semver.ts:6</li>
 									</ul>
 								</aside>
 								<h4 class="tsd-parameters-title">Parameters</h4>
@@ -159,10 +159,10 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jquery_.html">"presets/jquery"</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
@@ -170,7 +170,7 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
-						<a href="_presets_jshint_.html#jshint" class="tsd-kind-icon">jshint</a>
+						<a href="_presets_semver_.html#semver" class="tsd-kind-icon">semver</a>
 					</li>
 				</ul>
 			</nav>
