--- a/globals.html
+++ b/globals.html
@@ -80,6 +80,7 @@
 								<li class="tsd-kind-external-module"><a href="modules/_presets_index_.html" class="tsd-kind-icon">"presets/index"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_presets_jquery_.html" class="tsd-kind-icon">"presets/jquery"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_presets_jshint_.html" class="tsd-kind-icon">"presets/jshint"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_presets_semver_.html" class="tsd-kind-icon">"presets/semver"</a></li>
 							</ul>
 						</section>
 					</div>
@@ -121,6 +122,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
