--- a/interfaces/_interfaces_.opts.html
+++ b/interfaces/_interfaces_.opts.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">preset<span class="tsd-signature-symbol">:</span> <a href="../modules/_interfaces_.html#presettypes" class="tsd-signature-type">PresetTypes</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/interfaces.ts#L21">interfaces.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/interfaces.ts#L21">interfaces.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,6 +139,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
