--- a/interfaces/_interfaces_.preset.html
+++ b/interfaces/_interfaces_.preset.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">ignore<wbr>Pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/interfaces.ts#L12">interfaces.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/interfaces.ts#L12">interfaces.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +121,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/interfaces.ts#L13">interfaces.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/interfaces.ts#L13">interfaces.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -171,6 +171,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
