--- a/interfaces/_interfaces_.presets.html
+++ b/interfaces/_interfaces_.presets.html
@@ -118,6 +118,9 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_presets_jshint_.html">"presets/jshint"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_presets_semver_.html">"presets/semver"</a>
+					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
