--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -99,7 +99,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L61">index.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L62">index.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -124,7 +124,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L22">index.ts:22</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L23">index.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -159,7 +159,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L71">index.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L72">index.ts:72</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -192,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">presets<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L7">index.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L7">index.ts:7</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -201,7 +201,7 @@
 						<div class="tsd-signature tsd-kind-icon">angular<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L8">index.ts:8</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L8">index.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -211,7 +211,7 @@
 						<div class="tsd-signature tsd-kind-icon">atom<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L9">index.ts:9</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L9">index.ts:9</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -221,7 +221,7 @@
 						<div class="tsd-signature tsd-kind-icon">ember<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L11">index.ts:11</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L10">index.ts:10</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -231,7 +231,7 @@
 						<div class="tsd-signature tsd-kind-icon">eslint<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L10">index.ts:10</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L11">index.ts:11</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -241,7 +241,7 @@
 						<div class="tsd-signature tsd-kind-icon">jquery<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L12">index.ts:12</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L12">index.ts:12</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -251,7 +251,17 @@
 						<div class="tsd-signature tsd-kind-icon">jshint<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/index.ts#L13">index.ts:13</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L13">index.ts:13</a></li>
+							</ul>
+						</aside>
+					</section>
+					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
+						<a name="presets.semver" class="tsd-anchor"></a>
+						<h3>semver</h3>
+						<div class="tsd-signature tsd-kind-icon">semver<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_interfaces_.preset.html" class="tsd-signature-type">Preset</a></div>
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/index.ts#L14">index.ts:14</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -293,6 +303,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
