--- a/modules/_presets_eslint_.html
+++ b/modules/_presets_eslint_.html
@@ -87,7 +87,7 @@
 					<div class="tsd-signature tsd-kind-icon">eslint<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/presets/eslint.ts#L5">presets/eslint.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/eslint.ts#L5">presets/eslint.ts:5</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -96,7 +96,7 @@
 						<div class="tsd-signature tsd-kind-icon">ignore<wbr>Pattern<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> =&nbsp;/^WIP\:/</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/presets/eslint.ts#L54">presets/eslint.ts:54</a></li>
+								<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/eslint.ts#L54">presets/eslint.ts:54</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -110,7 +110,7 @@
 							<li class="tsd-description">
 								<aside class="tsd-sources">
 									<ul>
-										<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/presets/eslint.ts#L6">presets/eslint.ts:6</a></li>
+										<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/eslint.ts#L6">presets/eslint.ts:6</a></li>
 									</ul>
 								</aside>
 								<h4 class="tsd-parameters-title">Parameters</h4>
@@ -161,6 +161,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
