--- a/modules/_presets_jquery_.html
+++ b/modules/_presets_jquery_.html
@@ -87,7 +87,7 @@
 					<div class="tsd-signature tsd-kind-icon">jquery<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/presets/jquery.ts#L5">presets/jquery.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/jquery.ts#L5">presets/jquery.ts:5</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-object-literal">
@@ -100,7 +100,7 @@
 							<li class="tsd-description">
 								<aside class="tsd-sources">
 									<ul>
-										<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/811e5ab/src/presets/jquery.ts#L6">presets/jquery.ts:6</a></li>
+										<li>Defined in <a href="https://github.com/Joaquin6/validate-git-commit-msg/blob/db90df6/src/presets/jquery.ts#L6">presets/jquery.ts:6</a></li>
 									</ul>
 								</aside>
 								<h4 class="tsd-parameters-title">Parameters</h4>
@@ -151,6 +151,9 @@
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_presets_jshint_.html">"presets/jshint"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_presets_semver_.html">"presets/semver"</a>
 					</li>
 				</ul>
 			</nav>
